syntax = "proto3";

package stashr;

option go_package = "stashr/pb";

service KVStore {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message SetRequest {
  string key = 1;
  string value = 2;
  int64 ttl_seconds = 3;
}

message SetResponse {}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool deleted = 1;
}
